<resources>
    <string name="app_name">Final Project HobbiesConnect</string>
    <string name="social_name">Hobbies Connect</string>
    <string name="email_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_title">Sign In</string>
    <string name="upload_photo">upload photo</string>
    <string name="name_hint">Name\n</string>
    <string name="confirm_password_field_hint">Confirm password</string>
    <string name="choose_hobbies">Choose up to 5 hobbies: </string>
    <string name="save">Save</string>
    <string name="insert_year_of_birth">Insert Year of Birth</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">My Notifications</string>
    <string name="title_profile">My Profile</string>
    <string name="title_search">Search</string>
    <string name="title_chats">My Chats</string>
    <string name="logout">Logout</string>
    <string name="max_age">Max age</string>
    <string name="min_age">Min age</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_hobbies">Search by hobbies</string>
    <string name="back">back</string>
    <string name="vertical_scroll_view">vertical scroll view</string>
    <string name="add_friend">Add Friend</string>
    <string name="message">Message</string>
    <string name="pending">Pending</string>
    <string name="friends">Friends</string>
    <string name="accept">Accept</string>
    <string name="friend_pending">Friend Pending</string>
    <string name="decline">Decline</string>
    <string name="user_name">User Name</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="sent_message">Sent Message</string>
    <string name="received_message">Received Message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_friends">My Friends</string>
    <string name="friend_list">Friend List</string>
    <string name="last_message">last message</string>
    <string name="no_pending_requests">No Pending Requests Right Now</string>
    <string name="you_don_t_have_friends_right_now">You Don\'t Have Friends Right Now</string>
    <string name="no_chats_right_now">No Chats Right Now</string>
    <string name="default_date">29/10/2024</string>
    <string name="no_users_found">Users not found !</string>
    <string name="search_friends_by_name">Search friends by name</string>
    <string name="search">Search</string>
    <string name="notifications_title_nav_button">Notifications</string>

</resources>