<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/avatar"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_friend_list"
        android:icon="@drawable/baseline_friends_24"
        android:title="@string/friend_list" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/title_chats" />


</menu>