<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:background="@color/grey_300">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/topBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/chat_room_padding_linear_layout"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue_800"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/back_BTN_size"
            android:layout_height="@dimen/back_BTN_size"
           android:backgroundTint="@color/blue_800"
            app:tint="@color/white"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"
           />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhotoImageView_chat_room"
            android:layout_width="@dimen/back_BTN_size"
            android:layout_height="@dimen/back_BTN_size"
            android:src="@drawable/avatar"
            android:background="@color/blue_800"
           app:civ_circle_background_color="@color/white"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/chat_room_padding_linear_layout"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userNameTextView"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
        app:layout_constraintBottom_toTopOf="@id/messageInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/messageInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue_800">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/back_BTN_size"
            android:layout_weight="1"
            android:hint="@string/type_a_message"
            android:textColorHint="@color/black"
            android:padding="8dp"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:textColor="@color/black"
            android:scrollHorizontally="false"
            android:background="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/sendButton"
            android:layout_weight="0.15"
            android:layout_width="@dimen/back_BTN_size"
            android:layout_height="@dimen/back_BTN_size"
            android:background="@color/blue_800"
            android:src="@drawable/baseline_send_24"
            android:tint="@color/white"
            android:contentDescription="@string/send" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
