<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/avatar"
            android:layout_above="@id/profile_upload_photo_BTN"
            android:background="@color/grey_300"
            app:civ_circle_background_color="@color/white"
            android:id="@+id/profile_photo"
            android:layout_marginTop="@dimen/profile_top_margin"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_upload_photo_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_pic"
            android:backgroundTint="@color/blue_800"
            android:layout_above="@id/profile_name_text_view"
            android:text="@string/upload_photo"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

<com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_field_height"
            android:textSize="@dimen/text_size"
            android:background="@color/grey_300"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/open_top_margin"
            android:layout_gravity="center"
            tools:text="Name"
            android:textColor="@color/blue_800"
            android:textStyle="bold"

            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_age_text"
            tools:text="age"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue_800"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/open_top_margin"
            android:layout_below="@id/profile_name_text_view"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_choose_hobbies_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_hobbies"
            android:gravity="center"
            android:layout_below="@id/profile_age_text"
            android:layout_marginTop="@dimen/open_top_margin"
            android:textColor="@color/blue_800"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center"
            />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/profile_chip_group_hobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_choose_hobbies_text"
            android:layout_marginTop="@dimen/open_top_margin"
            android:layout_marginHorizontal="@dimen/hor_margin_hobbies">

        </com.google.android.material.chip.ChipGroup>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_my_hobbies_text"
            tools:text="My hobbies: "
            android:gravity="center"
            android:layout_below="@id/profile_chip_group_hobbies"
            android:layout_marginTop="@dimen/top_margin_small"
            android:textColor="@color/blue_800"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:layout_gravity="center"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_save_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/open_top_margin"
            android:text="@string/save"
            android:textSize="@dimen/text_size"
            android:backgroundTint="@color/blue_800"
            android:textColor="@color/white"
            android:layout_below="@id/profile_my_hobbies_text"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/open_top_margin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_logout_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/open_top_margin"
            android:text="@string/logout"
            android:textSize="@dimen/text_size"
            android:backgroundTint="@color/red_a700"
            android:textColor="@color/white"
            android:layout_below="@id/profile_save_BTN"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/profile_signout_BTN_bottom_margin"/>






    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>