<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey_300"
    android:layout_marginTop="@dimen/item_top_margin">
    <androidx.cardview.widget.CardView
        android:id="@+id/pending_user_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/line_elevation"
        app:cardCornerRadius="@dimen/line_corner_radius"
        app:cardElevation="@dimen/line_elevation"
        android:layout_marginVertical="@dimen/item_top_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/profile_photo_notification_size"
                android:layout_height="@dimen/profile_photo_notification_size"
                android:layout_alignParentStart="true"
                android:src="@drawable/avatar"
                android:background="@color/white"
                android:id="@+id/pending_user_profile_photo"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_photo_notification_size"
                android:orientation="vertical"
                android:layout_toEndOf="@id/pending_user_profile_photo"
                android:layout_marginHorizontal="@dimen/search_user_hor_margin_text">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pending_user_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_user_hobbies_text_top_margin"
                    tools:text="@string/friend_pending"
                    android:textSize="@dimen/user_search_text_hobbies_size"
                    android:textColor="@color/blue_800"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="end"
                    >
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/pending_user_accept_BTN"
                        android:layout_width="@dimen/search_field_height"
                        android:layout_height="@dimen/search_field_height"
                        android:src="@drawable/baseline_check_24"
                        android:backgroundTint="@color/blue_800"
                        app:tint="@color/white"
                        android:contentDescription="@string/accept"
                        />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/pending_user_decline_BTN"
                        android:layout_width="@dimen/search_field_height"
                        android:layout_height="@dimen/search_field_height"
                        android:src="@drawable/baseline_clear_24"
                        android:backgroundTint="@color/red_a700"
                        app:tint="@color/white"
                        android:contentDescription="@string/decline"

                        android:layout_toEndOf="@id/pending_user_accept_BTN"
                        android:layout_marginStart="@dimen/pending_BTN_hor_margin"/>




                </androidx.appcompat.widget.LinearLayoutCompat>









            </androidx.appcompat.widget.LinearLayoutCompat>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>